Revert "Correct vertical alignment of social share numbers"
This reverts commit cd5e9975b2902443f8447006dc1ea557338c0815.

--- a/static/src/stylesheets/module/content-garnett/_gallery.head.scss
+++ b/static/src/stylesheets/module/content-garnett/_gallery.head.scss
@@ -162,6 +162,7 @@
 
     .meta__numbers {
         float: right;
+        padding-top: $gs-baseline/2;
 
         .sharecount__value,
         a {
